Ajout strip pour smiler le payment et docker pour le deplyement